# ChangeLog for dev-python/snakeoil
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.84 2015/07/23 06:23:17 radhermit Exp $

  23 Jul 2015; Tim Harder <radhermit@gentoo.org> snakeoil-9999.ebuild:
  Add setuptools dep.

*snakeoil-0.6.4 (28 Jun 2015)

  28 Jun 2015; Tim Harder <radhermit@gentoo.org> +snakeoil-0.6.4.ebuild:
  Version bump.

  03 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add pypi to remote-id in metadata.xml

*snakeoil-0.6.3 (02 Apr 2015)

  02 Apr 2015; Tim Harder <radhermit@gentoo.org> -snakeoil-0.6.1.ebuild,
  -snakeoil-0.6.2.ebuild, +snakeoil-0.6.3.ebuild:
  Version bump and remove old.

*snakeoil-0.6.2 (01 Apr 2015)

  01 Apr 2015; Tim Harder <radhermit@gentoo.org> +snakeoil-0.6.2.ebuild,
  snakeoil-9999.ebuild:
  Version bump.

*snakeoil-0.6.1 (24 Mar 2015)

  24 Mar 2015; Tim Harder <radhermit@gentoo.org> +snakeoil-0.6.1.ebuild,
  snakeoil-9999.ebuild:
  Version bump.

  19 Feb 2015; Tim Harder <radhermit@gentoo.org> snakeoil-0.5.3.ebuild:
  Bump to EAPI 5 and drop py26 and py32 support.

  19 Feb 2015; Tim Harder <radhermit@gentoo.org> snakeoil-9999.ebuild:
  Bump to EAPI 5.

  17 Feb 2015; Tim Harder <radhermit@gentoo.org> snakeoil-9999.ebuild:
  Drop py3.2 support and use https git repo.

  09 Feb 2015; Pacho Ramos <pacho@gentoo.org> -snakeoil-0.5.2.ebuild:
  Drop old version using deprecated eclasses and old EAPI

  08 Jan 2015; Brian Dolbec <dolsen@gentoo.org> snakeoil-0.5.3.ebuild:
  Add python-3.4 to the PYTHON_COMPAT list with Tim's blessing.

  15 Dec 2014; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Drop dolsen as a maintainer and update upstream metadata.

  18 Oct 2014; Mike Frysinger <vapier@gentoo.org> snakeoil-0.5.2.ebuild,
  snakeoil-0.5.3.ebuild, snakeoil-9999.ebuild:
  Add arm64/m68k love.

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> snakeoil-0.5.2.ebuild,
  snakeoil-0.5.3.ebuild, snakeoil-9999.ebuild: