@@ -1,9 +1,19 @@
-DIST snakeoil-0.5.3.tar.bz2 148449 SHA256 564871e2ff9b6f55b15bd8b1fb18be31483dc4dc2c7d17410108546991b92c93 SHA512 dcd6b61a0829c48c87ef3f7bce516e5d1caf2c8da97b28df7e6d1b2380fd7803cc3714836b3f38e649d1761894155579e22caa7a1595f212d7e4d4f2118d9e20 WHIRLPOOL 4ecd2b539d3c55e1f967f85a968387b76f91cc2a57bd21e246726140f437d162fbf592c431b8649b85bee94fd68970e95a9712d43f92cc4894c0610402b09a0f
-DIST snakeoil-0.6.3.tar.gz 192675 SHA256 474dd9a35b5167d51e62f9a0fb11705b574b87c3a0a266a00757b4cb5fdbedd9 SHA512 2edb4c63ec461e942833560204517249e37a8cebdc01188c03678060c528a30ecf0a1e480248601f595f5979bb9fd1af68f082ec297dfb8414ca3bb2f482806f WHIRLPOOL df67a36fb8950a11f9c51ca1a9a0707b13fb8fc99528e8fd55ae0e6689c618b8ac2f35308395ad1b70c4f5fbafb22eeea695c5c309b7d020efb6a49f0f07341c
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST snakeoil-0.6.4.tar.gz 192291 SHA256 8636918381db16bf910afcb30a5e8722038afda32fbf41a977fabea75775131e SHA512 c2290801426de1fd6fe3e668edfc36e05cf50a6990f336eb604eece27f56716b5cff672ca7642906636fa1a8afa82f37867e898680f54b154c37cf51ef72eb9e WHIRLPOOL 08c778296f0881c1884eb0c23fc2e4e81b28f406971d84d71641ac4b4b864e8f472c06fad2937d279565b627ef983f89dbe6e6e1a5dbe7b4263ac00b5d76aea5
-EBUILD snakeoil-0.5.3.ebuild 849 SHA256 3ce6a3baa756bb1f5d4ede67ede11b4a9c8b74c4d3f85ef961d20a987b51271e SHA512 122349b3b8fbde5cffd94bb489513e352eff8acdbf7c2c16b9a39f91f4b6927e48ce2961f786dbf733185e9f767b084442d033c7be0c734733127aa4e80a0bb1 WHIRLPOOL 4f3c45f627bee3c5f4a7b6661306e7b7db10d6d275830d7c60bae782c64e70f47aa01c67acbdf8c320e8420fd4d7183e5db7d84ac3f9ba196c2f6b473d48294f
-EBUILD snakeoil-0.6.3.ebuild 793 SHA256 d125652c13a5ec0fc9aaa4b58deeeb396b86132263fd8c2c2f1b36001296be6e SHA512 ac788a236cae21dad408b1c6d1ea20d6a363a2e9b3ee7631c9bfd1883a0c73c4b9d14a6f69ace0d11a1d67c80f8d40ef20ff14521bcdf39efb1224ffbb0cd397 WHIRLPOOL 97d93d5a0cfb401bc04804c8df5da348a5a7c791d78bfab0c87e4c2b84f640761c874d7db4c24e8a843e7de9edc41a8fc53d5d0b6becce0db93c7cdba34316d3
 EBUILD snakeoil-0.6.4.ebuild 793 SHA256 42567f1ecf3d49a765a3ead5d70227d82b44e78066f05bf21bfbad729d3ea62c SHA512 d54a8c7f6593cfb0c022e50494687c2b9191fb28ecdbd8145b23a8c166132974e9e1129eb8b398994504bf0d64bee28256cdb6fed2222a5940c45f8a4e22c875 WHIRLPOOL d61aa4823298f51d37dff019c24c097c1f87d440fa5b47dfc981b4263efc3284713e5a16e46255d86fc875c6a73991f9650dcbbd9da22a6184b985bb77cfdbeb
 EBUILD snakeoil-9999.ebuild 843 SHA256 b8cdbcedd11cca7795c97fd7adab4f280d21aaeccc253fe9c19ced3f5e30e1f6 SHA512 cff87b4992f540f592acbfa37ffe56fe788102bb2ca580037261d0e93e534d372eb1dd350edc8ff151f03cc3e02b5cfbf2c9bd1958a0fd23456eff1b0d777cbe WHIRLPOOL cec96b440a9fd27a097a52a234eb19e1cb5c09856b52fc7e588f3e1e420ba21ae5773b93116f376a4dd8d6009d7532ed2e895c7e6afbf0a3201c0eb9632ad907
-MISC ChangeLog 12981 SHA256 6f4eae1af161b7c84abd5ed2f4d2913535cf0f44ce810288f92f52f78349bf0d SHA512 4129b15cc08a6106b3312bd85182d59b123dbe7d86662a274c43d197e8a6f2537e4879d152622cc379f736cb295cc30a4af1b80ce36947d277c5ea8f947be2f1 WHIRLPOOL 11e8faaa01f0f2a0fd045b30a4bc389f9e4bf6a77e1aef9f5bfaae42c58ad4d3cd6dc8604491b209dff41c3db02b6b79b2050372bba8833b787e8eac3f14c756
+MISC ChangeLog 13095 SHA256 e8dd17a13603d005814e5afca2c6d7c3bd9f54e72780573263a0d6a5655eee7a SHA512 9283b4cf5cadbf7dab573063242caa4fe48624c27b04e0d4283bd825a1d8fc752976b174c55bb884d9550d245b8f4c6650adbc8c1dacfe918a094640b9d3b7e6 WHIRLPOOL 46c632f700f5db12ab658f98792bda693195bf50e2dc6e12bfa2eddb3c2cb52383490355171ccbd8b77a45b20bc6446ffda28bdae194938fb50b80eac36e57a5
 MISC metadata.xml 371 SHA256 41dfa46d646be80293b1f813ecad89300192960f1d95931705506330a837373b SHA512 f62d5608dcb5ac3d26e28091bb5660f7346e3c14188f3310105cae0e5d323939ea3355d32f65bb22374cd5629705ffdc20906035af4ada2933899c27f5100692 WHIRLPOOL d8442b95601ea383065db90454c8f734d7b7fcf5eb9c443e8427045f8b58c3b730f3a78f7e1657852c5220690b57e07f5649db08aac8279a013a499556bb6c02
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJVsIkKAAoJEEqz6FtPBkyj5wkIALccu/iBOY5Hqwn3DgQ5R/k/
+BL0d8g52RVYq+oQRp6pR1dYZrrcWGVGij2+MbD1+RNTtk2KmyBRDv2R/LtalNHQH
+13P+/lrD8I3QajTGZGQ25qmgO6Z+cZ0zdO+xwBJtoyXG8vCFsa+9MR5ZRcQpQCqx
+OT2vNFgdeS3b0n0WACqO8FGxHxbfk2swgcuqCggFzM33DzQeFmRwHyw0NMNeoe0z
+UjILaYjzO4FFpbycTsaIbp/M5YMgcTk6gSBSn84f4XiqEYPVlBCcHS/XbkLAlzE/
+FDPE2LF1r8LQSG3RJuBe6UBL1XeJHelC9SPucJRWDKAJH45MH+vGXmA2THrFIcs=
+=RtaV
+-----END PGP SIGNATURE-----
